<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/dish1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dish1"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:entries="@array/entries"
            android:prompt="@string/prompt" >
        </Spinner>

        <TextView
            android:id="@+id/count1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count1"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/counter1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/counter1"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/dish2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dish2"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:entries="@array/entries"
            android:prompt="@string/prompt1" >
        </Spinner>

        <TextView
            android:id="@+id/count2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count2"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/counter2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/counter2"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear2"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/dish3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dish3"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:entries="@array/entries"
            android:prompt="@string/prompt2" >
        </Spinner>

        <TextView
            android:id="@+id/count3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count3"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/counter3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/counter3"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear3"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/payed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/payed"
            android:textIsSelectable="true"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="80sp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/linear4"
        android:layout_below="@+id/linear4"
        android:onClick="onSaveBtnClick"
        android:text="@string/save" />

</RelativeLayout>